# calibration-toolbox

./: CMakeLists.txt  README.md  calibrate.py  calibration_and_undistortion.cpp  calibration_and_undistortion.cppnotes  generate_calibration.cpp  main.cpp  undistort.py  undistort_images.cpp  undistortion.cpp  undistortion.h
calibration_toolbox/: calibration.cpp  calibration.h  undistortion.cpp  undistortion.h
scripts/: calibrate.py  undistort.py  undistort_fisheye.py
utils/: input_parser.hpp
